--- a/src/styles/Dropdown.module.css
+++ b/src/styles/Dropdown.module.css
@@ -1,5 +1,6 @@
 .dropdown {
   position: relative;
+    height: fit-content;
   display: inline-block;
   color: var(--frog-black);
   font-family: var(--font-text);
