--- a/src/styles/Home.module.css
+++ b/src/styles/Home.module.css
@@ -21,7 +21,8 @@
   color: var(--rose-dk);
   /* color: var(--frog-black); */
   font-family: var(--font-title);
-  padding: 1rem;
+  /* padding: 1rem; */
+  margin: 1rem;
 }
 
 .title p {
@@ -63,5 +64,6 @@
   color: var(--rose-dk);
   font-family: var(--font-title);
   font-size: 1rem;
-  text-align: center;
+  padding-left: 1rem;
+  text-align: left;
 }
